--- a/07.spring/lec09_summary/src/main/resources/templates/member/getMemberList.html
+++ b/07.spring/lec09_summary/src/main/resources/templates/member/getMemberList.html
@@ -75,7 +75,7 @@
 
 		<div class="row align-items-start mt-3">
 		    <div class="col-auto me-2">
-		       <a th:if="${session['member'].role == 'ADMIN'}" th:href="@{/getBoardList}" class="btn btn-primary" >게시글목록</a>
+		       <a th:if="${session['member'].role == 'ADMIN'}" th:href="@{/getBoardList}" class="btn btn-primary mt-3" >게시글목록</a>
 		    </div>
 		    
 			<ul class="col pagination justify-content-center">						
