--- a/07.spring/lec09_summary/src/main/resources/templates/member/insertMember.html
+++ b/07.spring/lec09_summary/src/main/resources/templates/member/insertMember.html
@@ -41,11 +41,11 @@
 							<div class="input-group-text"><i class="fas fa-address-book"></i></div>
 							<input type="text" name="name" class="form-control" value="" required placeholder="User Name....">
 						</div>
-						<div class="form-check form-switch mb-3">
-							<input class="form-check-input" type="checkbox" name="role" id="role" th:field="${member.role}" value="ADMIN">
-							<label class="form-check-label" for="role">관리자</label>
-						</div>					
-					
+						<div class="input-group mb-3">
+							<input type="checkbox" name="role" class="input-group-text" id="role" th:field="${member.role}" value="ADMIN">
+							<!-- <input type="hidden" name="_role" value="on"> -->
+							<label class="form-check-label ms-sm-2" for="role">관리자</label>
+						</div>
 					</div> 
  					
 					<div class="modal-footer">
