--- a/07.spring/lec99_project/src/main/resources/templates/board/updateBoard.html
+++ b/07.spring/lec99_project/src/main/resources/templates/board/updateBoard.html
@@ -45,7 +45,7 @@
 		</div>
 		<div class="col-md-12">
 			<hr />
-	  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="20" th:value="${board.content"></textarea>
+	  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="20" name="content" th:text="${board.content}"></textarea>
 		</div>
 		<div class="col-md-12">
 			<hr />
@@ -54,7 +54,7 @@
 		<div class="col-md-12" align="right">
 			<br />
 			<a th:href="@{/getBoardList}" class="btn btn-outline-dark">목록가기</a>
-			<input th:if="${session.member.Id != board.writer ? 'disabled' : ''" type="submit" class="btn btn-success" value="수정" />
+			<input th:if="${session.member.id != board.memberNick ? 'disabled' : ''}" type="submit" class="btn btn-success" value="수정" />
 		</div>
 		</div>
 	</form>
