--- a/07.spring/lec99_project/src/main/resources/templates/board/getBoard.html
+++ b/07.spring/lec99_project/src/main/resources/templates/board/getBoard.html
@@ -32,12 +32,12 @@
 
 <div class="container mt-4 ml-auto mr-auto">
 	<form th:action="@{/updateBoard}" method="post">
-		<input type="hidden" name="writer" class="form-control" th:value="${session.member.id}">
+		<input type="hidden" name="member_id" class="form-control" th:value="${session.member.id}">
 		
 		<div class="row">
 		<div class="col-md-2" >말머리 선택
 			<select name="contentType">
-				<option name="contentType" th:text="${board.contentType}" readonly></option>
+				<option name="contentType" th:text="${board.contentType}" selected readonly></option>
             </select>
         </div>
         <div class="col-md-10">		
@@ -45,16 +45,17 @@
 		</div>
 		<div class="col-md-12">
 			<hr />
-	  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="20" th:value="${board.content"  readonly></textarea>
+	  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="20" name="content" th:text="${board.content}"></textarea>
 		</div>
 		<div class="col-md-12">
 			<hr />
-			<input type="file" name="uploadFile" th:value="${board.fileName}"  readonly/>
+			<input type="text" name="uploadFile" th:value="${board.fileName}"  readonly/>
 		</div>
 		<div class="col-md-12" align="right">
 			<br />
 			<a th:href="@{/getBoardList}" class="btn btn-outline-dark">목록가기</a>
-			<input  th:if="${session.member.Id != board.writer ? 'disabled' : ''" type="submit" class="btn btn-success" value="수정" />
+			<input type="text" th:text="${member.id}"/>
+			<input th:if="${session.member.id != board.memberNick ? 'disabled' : ''}" type="submit" class="btn btn-success" value="수정" />
 		</div>
 		</div>
 	</form>
