--- a/07.spring/lec99_project/src/main/resources/templates/board/insertBoard.html
+++ b/07.spring/lec99_project/src/main/resources/templates/board/insertBoard.html
@@ -32,7 +32,7 @@
 
 <div class="container mt-4 ml-auto mr-auto">
 	<form action="insertBoard" method="post" enctype="multipart/form-data">
-		<input type="hidden" name="writer" class="form-control" th:value="${session.member.id}">
+		<input type="hidden" name="memberId" class="form-control" th:value="${session.member.id}">
 		
 		<div class="row">
 		<div class="col-md-2" >말머리 선택
@@ -46,7 +46,7 @@
 		</div>
 		<div class="col-md-12">
 			<hr />
-	  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="20" placeholder="내용을 입력하세요."></textarea>
+	  		<textarea class="form-control" id="exampleFormControlTextarea1" rows="20" name="content" placeholder="내용을 입력하세요."></textarea>
 		</div>
 		<div class="col-md-12">
 			<hr />
