--- a/07.spring/lec99_project/src/main/resources/templates/login/login.html
+++ b/07.spring/lec99_project/src/main/resources/templates/login/login.html
@@ -9,20 +9,20 @@
 </head>
 <body>
 	<div class="container" align="center">
-		<form th:action="getBoardList" method="post" border="2" >
-	<h1 style="height:100px">로그인</h1>
-  <div class="form-row">
-    <div class="col-md-12 mb-3">
-      <label for="validationDefault01" align="left">아이디</label>
-      <input type="text" class="form-control" id="validationDefault01" name="id" value="" required>
-    </div>
-    <div class="col-md-12 mb-3">
-      <label for="validationDefault02">비밀번호</label>
-      <input type="password" class="form-control" id="validationDefault01" name="password" value="" required>
-    </div>
-  </div>
-  <input type="submit" value="login"/>
-  </form>
-  </div>
+		<form th:action="login" method="post" border="2" >
+			<h1 style="height:100px">로그인</h1>
+		  <div class="form-row">
+		    <div class="col-md-12 mb-3">
+		      <label for="validationDefault01" align="left">아이디</label>
+		      <input type="text" class="form-control" id="validationDefault01" name="id" value="admin" required>
+		    </div>
+		    <div class="col-md-12 mb-3">
+		      <label for="validationDefault02">비밀번호</label>
+		      <input type="password" class="form-control" id="validationDefault01" name="password" value="123" required>
+		    </div>
+		  </div>
+		  <input type="submit" value="login"/>
+		  </form>
+	  </div>
 </body>
 </html>
