--- a/07.spring/lec99_project/src/main/resources/templates/member/updateMember.html
+++ b/07.spring/lec99_project/src/main/resources/templates/member/updateMember.html
@@ -5,41 +5,41 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">   
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-<title>회원가입</title>
+<title>회원수정</title>
 </head>
 <body>
 	<div class="container" align="center">
-		<form action="insertMember" method="post" border="2" >
-	<h1 style="height:100px">회원가입</h1>
+		<form action="updateMember" method="post" border="2" >
+	<h1 style="height:100px">회원수정</h1>
   <div class="form-row">
     <div class="col-md-6 mb-3">
       <label for="validationDefault01" align="left">아이디</label>
-      <input type="text" class="form-control" id="validationDefault01" name="id" value="" required>
+      <input type="text" class="form-control" id="validationDefault01" name="id" th:text="${member.id}">
     </div>
     <div class="col-md-6 mb-3">
       <label for="validationDefault02">비밀번호</label>
-      <input type="password" class="form-control" id="validationDefault01" name="password" value="" required>
+      <input type="text" class="form-control" id="validationDefault01" name="password" th:text="${member.password}">
     </div>
-  </div>
+  </div> 
   <div class="form-row">
     <div class="col-md-6 mb-3">
       <label for="validationDefault03">이름</label>
-      <input type="text" class="form-control" id="validationDefault02" name="name" value="" required>
+      <input type="text" class="form-control" id="validationDefault02" name="name" th:text="${member.name}">
     </div>
     <div class="col-md-6 mb-3">
       <label for="validationDefault04">닉네임</label>
-      <input type="text" class="form-control" id="validationDefault03" name="nick" required>
+      <input type="text" class="form-control" id="validationDefault03" name="nick" th:text="${member.nick}">
     </div>
     </div>
     <div class="form-row">
     <div class="col-md-6 mb-3">
       <label for="validationDefault05">연락처</label>
-      <input type="text" class="form-control" id="validationDefault05" name="tel" required placeholder="(예) 010-1234-5678">
+      <input type="text" class="form-control" id="validationDefault05" name="tel" th:text="${member.tel}">
     </div>
     <div class="col-md-6 mb-3">
       <label for="validationDefault06">지역</label>
-      <select class="custom-select" id="validationDefault04" name="region" required>
-        <option selected disabled value="">현재 살고있는 지역을 선택하세요</option>
+      <select class="custom-select" id="validationDefault04" name="region" >
+        <option name="region" th:text="${member.region}" selected disabled></option>
         <option name="region" value="답십리동">답십리동</option>
         <option name="region" value="용신동">용신동</option>
         <option name="region" value="이문동">이문동</option>
@@ -53,22 +53,16 @@
     </div>
     <div class="col-md-6 mb-3">
       <label for="validationDefault07">주요 활동</label>
-      <select class="custom-select" id="validationDefault04" name="role" required>
-        <option selected disabled value="">판매/소비</option>
+      <select class="custom-select" id="validationDefault04" name="role">
+        <option selected disabled name="role" th:text="${member.role}"></option>
         <option name="role" value="SELLER">판매</option>
-        <option name="role" value="BUYER">소비</option>
+        <option name="role" value="BUYER">소비</option>      
       </select>
     </div>
   </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-      <label class="form-check-label" for="invalidCheck2">
-        회원가입에 동의하십니까?
-      </label>
-    </div>
-  </div>
-  <button class="btn btn-success" type="submit">회원가입</button>
+  <button class="btn btn-outline-success"><a th:href="@{/getMemberList}">회원목록</a></button>
+  <button class="btn btn-success"><a th:href="@{updateMember}">회원수정</a></button>
+	
 </form>
 	</div>
 </body>
